# PyPBR

./: .buildinfo  .gitignore  README.md  contributing.html  genindex.html  index.html  objects.inv  py-modindex.html  pyproject.toml  requirements.txt  search.html  searchindex.js  setup.py  usage.html
.github/workflows/: deploy-docs.yml  python-publish.yml
_modules/: index.html
_modules/pypbr/: io.html  material.html  models.html  utils.html
_modules/pypbr/blending/: blending.html  functional.html
_sources/api/: material.rst.txt
_sources/tutorials/: 01_material.rst.txt
api/: blending.html  index.html  io.html  material.html  models.html  utils.html
docs/source/: conf.py  contributing.rst  index.rst  usage.rst
docs/source/api/: blending.rst  index.rst  io.rst  material.rst  materials.rst  models.rst  transforms.rst  utils.rst
docs/source/tutorials/: 01_material.rst  02_manipulation.rst  (+7 more)
examples/: example_blend.py  example_brdf.py
pypbr/: __init__.py  _version.py  io.py  material.py  models.py  utils.py
pypbr/blending/: __init__.py  blending.py  functional.py
pypbr/materials/: __init__.py  base.py  diffuse.py  metallic.py
pypbr/models/: __init__.py  cooktorrance.py
pypbr/training/: dataset.py  losses.py
pypbr/transforms/: __init__.py  functional.py  transforms.py
pypbr/utils/: __init__.py  enums.py  functions.py
tests/: test_blending.py  test_io.py  test_materials.py  test_models.py  test_transforms.py  test_utils.py
tutorials/: 01_material.html  02_manipulation.html  03_brdf.html  04_blending.html  05_advanced.html  index.html
